codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__test_harness__tests__chatwidget_single_exchange.snap
---
source: tui/src/chatwidget/test_harness.rs
expression: snapshot_output
---
 ┌────────────────────────────────────────────────────────────────────────────┐ 
 │    Code  •  Model: GPT-5-Codex  •  Reasoning: medium  •  Directory: /tmp   │ 
 └────────────────────────────────────────────────────────────────────────────┘ 
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 • Hi there!                                                                    
                                                                                
                                                                                
 ┌────────────────────────────────────────────────────────────────────────────┐ 
 │ What can I code for you tonight?                                           │ 
 └────────────────────────────────────────────────────────────────────────────┘ 
                                                                   Ctrl+H help
